# kahan-float

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  WORKSPACE.bazel  genhtml.sh  makefile
.devcontainer/: Dockerfile
demo/: BUILD.bazel  CMakeLists.txt  main_test.cpp
include/: BUILD.bazel
include/kahan-float/: BUILD.bazel  kahan.hpp  neumaier.hpp
src/: BUILD.bazel  kahan.hpp  main_test.cpp  neumaier.hpp
src/kahan-float/: BUILD.bazel
tests/: .gitignore  BUILD.bazel  CMakeLists.txt  all.bench.cpp  get_gbenchmark.sh  kahan.test.cpp  makefile
tests/bench/: info.txt  kahan.bench.cpp  makefile  vector.bench.cpp
tests/kahan/: kahan.test.cpp
tests/kahan-float_tests/: kahan.test.cpp
