package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_binary(
    name = "app_demo",
    srcs = ["main_test.cpp"],
    #deps = ["//src/kahan-float:kahan"],
    deps = ["//src:kahan-float"],
)

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
)
