package(
    default_visibility = ["//visibility:public"],
)

#package_group(
#    name = "group-kahan-float",
#    packages = [
#        "//src/kahan-float",
#    ],
#)


cc_library(
    name = "kahan-float",
    #deps = ["//src/kahan-float:kahan", "//src/kahan-float:neumaier"],
    deps = ["//src/kahan-float:all"],
    #visibility = ["//visibility:public"],
)


####
# https://stackoverflow.com/questions/56781141/bazel-including-all-headers-from-a-directory-when-importing-a-static-library

#cc_library(name = "kahan-float-public", 
           #includes = ["."],
           #hdrs = glob(["**/*.hpp"]),
           #deps = ["//src/kahan-float"],
           #visibility = ["//visibility:public"],
#           copts = ["-Isrc"],
#)