package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "kahan_test",
    srcs = ["kahan-float/kahan.test.cpp"],
    deps = ["//src:kahan-float", ":catch2"],
)


cc_library(
    name = "catch2",
    hdrs = ["thirdparty/catch2/catch.hpp"]
)
