load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_test(
    name = "kahan_test",
    srcs = ["kahan-float_tests/kahan.test.cpp"],
    deps = ["//include:kahan-float", ":catch2"],
    defines = ["HEADER_ONLY"]
)


cc_library(
    name = "catch2",
    strip_include_prefix = "thirdparty/",
    hdrs = ["thirdparty/catch2/catch_amalgamated.hpp"],
    srcs = ["thirdparty/catch2/catch_amalgamated.cpp"],
)

test_suite(
    name = "all-tests",
    tests = [
        "kahan_test"
    ]
)