load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "kahan",
    hdrs = ["kahan.hpp"],
    #includes=["."],
    #copts = ["-std=c++11"],
    include_prefix="kahan-float",
    # https://docs.bazel.build/versions/master/bazel-and-cpp.html#include-paths
)

cc_library(
    name = "neumaier",
    hdrs = ["neumaier.hpp"],
    #includes=["."],
    #copts = ["-std=c++11"],
    include_prefix="kahan-float"
    # https://docs.bazel.build/versions/master/bazel-and-cpp.html#include-paths
)

cc_library(
    name = "all_hpp",
    hdrs = glob([
        "**/*.hpp",
    ]),
    include_prefix="kahan-float"
    # https://docs.bazel.build/versions/master/bazel-and-cpp.html#include-paths
)

